data/derived/comb/progs/unify/prog7100.ml.out
Characters 94-95:
  (n /. 10) :: return;;
   ^
Error: This expression has type int but an expression was expected of type
         float
